--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 
 body {
   overflow-x: hidden;
+  margin: 0;
+  background-color: #f3f4f6 !important;
 }
 
 .hea{
@@ -15,7 +17,7 @@ body {
     align-items: center;
     height: 7vh;
     width: 100vw;
-    background-color: 	#191970 !important;
+    background-color:#0b132b !important;
     color: white;
 }
 
@@ -131,7 +133,155 @@ color: #0047AB;
   margin: 15px 0;         /* Space above and below line */
 }
 
+.hero {
+  position: relative;
+  height: 450px;
+  overflow: hidden;
+}
+
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
+.hero-content {
+  position: relative;
+  z-index: 2;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.typing-box {
+  min-height: 70px;
+}
+.h{
+  font-size: 60px;
+}
+
+.pt{
+  font-size: 20px;
+}
+
+.typewriter {
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 3px solid #fff;
+  width: 0;
+  animation: typing 3.5s steps(30, end) forwards,
+             blink 0.7s infinite;
+  
+}
+
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+@keyframes blink {
+  50% { border-color: transparent }
+}
+
+.cdd{
+  padding-left: 60px;
+}
+
+.cddd{
+  padding-left: 120px;
+}
+
+.cdddd{
+  padding-left: 50px;
+}
+
+.dii{
+  height: 200px;
+  width: 100vw;
+  background-color: white !important;
+  display: flex;
+  justify-content:space-around;
+  align-items: center;
+  text-align: center;
+}
+
+.ddddd{
+  padding-right: 40px;
+}
+
+.iii{
+  color: #0047AB;
+}
 
 
+#typing-text::after {
+  content: "|";
+  animation: blink 1s infinite;
+}
+
+@keyframes blink {
+  0% { opacity: 1; }
+  50% { opacity: 0; }
+  100% { opacity: 1; }
+}
 
 
+.ts{
+  background-color: orange;
+}
+
+.cdo{
+  height: 250px;
+}
+
+.clo:hover{
+  box-shadow: #ccc;
+}
+
+.card {
+  transition: all 0.3s ease;
+}
+
+.card:hover {
+  box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.3);
+  transform: translateY(-5px);
+}
+
+
+.hov{
+  transition: all 0.3 ease;
+}
+
+.hov:hover{
+  border: 1px solid #0047AB;
+}
+
+.our{
+  height: 250px;
+  width:100vw;
+  background-color: #0047AB;
+}
+
+.our{
+  margin-bottom: 0 !important;
+}
+
+.foo{
+  margin-top: 0 !important;
+  padding-top: 30px;
+}
+
+.our .row,
+.foo .row{
+  margin-left: 0;
+  margin-right: 0;
+}
