--- a/style.css
+++ b/style.css
@@ -563,18 +563,10 @@ color: #0047AB;
   color:#007bff;
 }
 
-.nav-link-custom{
-  color: white;
-  text-decoration: none;
-  position: relative;
+.nab a.active{
+  border-bottom: 3px solid white;
 }
 
-.nav-link-custom.active::after{
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 5px;
-  width: 100%;
-  height: 2px;
-  background-color: white;
+.iinput {
+  transition: 0.3s;
 }
